# ps-rust-example

./: .env  Cargo.toml  README.md  rust_example.sqlite
src/: error.rs  lib.rs  main.rs  models.rs
